--- a/.github/ISSUE_TEMPLATE/Test1.yaml
+++ b/.github/ISSUE_TEMPLATE/Test1.yaml
@@ -1,8 +1,8 @@
 ---
-name: "🐛 Bug Report"
-description: Report a bug
-title: "🐛 [BUG] - <title>"
-labels: ["bug"]
+name: "Test1 Issue Template"
+description: test
+title: "Test1 Issue Template"
+labels: []
 assignees: []
 
 body:
