Add : Test Code & start Projects
Signed-off-by: ghdtpdnjs <hsw1805@kookmin.ac.kr>
Co-authored-by: ymw0407 <yunminwo1211@gmail.com>

--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
   "bugs": {
     "url": "https://github.com/hsw1805/GitHub-FormSchema-Converter/issues"
   },
-  "homepage": "https://github.com/hsw1805/GitHub-FormSchema-Converter#readme"
+  "homepage": "https://github.com/hsw1805/GitHub-FormSchema-Converter#readme",
+  "dependencies": {
+    "js-yaml": "^4.1.0"
+  },
+  "type": "commonjs"
 }
